--- a/examples/DVCLive-Evidently.ipynb
+++ b/examples/DVCLive-Evidently.ipynb
@@ -616,8 +616,8 @@
    },
    "outputs": [],
    "source": [
-    "from evidently.report import Report\n",
-    "from evidently.metric_preset import DataDriftPreset"
+    "from evidently.metric_preset import DataDriftPreset\n",
+    "from evidently.report import Report"
    ]
   },
   {
