--- a/examples/DVCLive-Fabric.ipynb
+++ b/examples/DVCLive-Fabric.ipynb
@@ -81,12 +81,11 @@
     "from types import SimpleNamespace\n",
     "\n",
     "import torch\n",
-    "from torch import nn\n",
     "import torch.nn.functional as F  # noqa: N812\n",
-    "from torch import optim\n",
     "import torchvision.transforms as T  # noqa: N812\n",
     "from lightning.fabric import Fabric, seed_everything\n",
     "from lightning.fabric.utilities.rank_zero import rank_zero_only\n",
+    "from torch import nn, optim\n",
     "from torch.optim.lr_scheduler import StepLR\n",
     "from torchmetrics.classification import Accuracy\n",
     "from torchvision.datasets import MNIST\n",
