--- a/examples/DVCLive-HuggingFace.ipynb
+++ b/examples/DVCLive-HuggingFace.ipynb
@@ -145,8 +145,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import evaluate\n",
+    "import numpy as np\n",
     "\n",
     "metric = evaluate.load(\"f1\")\n",
     "\n",
@@ -188,8 +188,8 @@
    },
    "outputs": [],
    "source": [
+    "from transformers import AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
     "from transformers.integrations import DVCLiveCallback\n",
-    "from transformers import AutoModelForSequenceClassification, TrainingArguments, Trainer\n",
     "\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\n",
     "    \"distilbert-base-cased\", num_labels=2\n",
