--- a/examples/DVCLive-PyTorch-Lightning.ipynb
+++ b/examples/DVCLive-PyTorch-Lightning.ipynb
@@ -90,7 +90,7 @@
     "        )\n",
     "\n",
     "    def training_step(self, batch, batch_idx):  # noqa: ARG002\n",
-    "        x, y = batch\n",
+    "        x, _y = batch\n",
     "        x = x.view(x.size(0), -1)\n",
     "        z = self.encoder(x)\n",
     "        x_hat = self.decoder(z)\n",
@@ -99,7 +99,7 @@
     "        return train_mse\n",
     "\n",
     "    def validation_step(self, batch, batch_idx):  # noqa: ARG002\n",
-    "        x, y = batch\n",
+    "        x, _y = batch\n",
     "        x = x.view(x.size(0), -1)\n",
     "        z = self.encoder(x)\n",
     "        x_hat = self.decoder(z)\n",
@@ -128,8 +128,8 @@
    },
    "outputs": [],
    "source": [
-    "from torchvision.datasets import MNIST\n",
     "from torchvision import transforms\n",
+    "from torchvision.datasets import MNIST\n",
     "\n",
     "transform = transforms.ToTensor()\n",
     "train_set = MNIST(root=\"MNIST\", download=True, train=True, transform=transform)\n",
